Updates margin alignment issue fix

--- a/css/build.css
+++ b/css/build.css
@@ -1,3 +1,8 @@
+img {
+  /* Simulates how images are aligned in Bootstrap */
+  vertical-align: middle;
+}
+
 .image-placeholder {
   border: 1px solid #cccccc;
   background-color: rgba(217, 221, 222, 0.5);
@@ -27,10 +32,9 @@ img[data-image-id] {
 canvas.lazy-placeholder {
   max-width: 100%;
   height: auto;
-  display: inline-block;
-  /* Uncertain at the moment where the 5px comes from at the moment, but is consistent across devices and image size */
-  margin-bottom: -9px;
+  display: inline;
   opacity: 0;
+  vertical-align: middle;
 }
 
 img.lazy-placeholder {
